Update dashboard layout to 3 columns

--- a/public/index.css
+++ b/public/index.css
@@ -299,9 +299,10 @@ ul {
 
 .category-articles {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 25px;
 }
+
 
 /* News Card */
 .news-card {
